--- a/cv.tex
+++ b/cv.tex
@@ -239,10 +239,10 @@
 
 \begin{EntriesTable}
   \Duration{Jun'21}{\Ongoing}  &
-  \Appointment{Research Associate - IIIT Hyderabad}{Centre for Computational Social Science}{Advised by Prof. PK}{Worked on Long Document Summarization and linguistically-motivated NLP algorithms for Indian Languages.}
+  \Appointment{Research Associate - IIIT Hyderabad}{Centre for Computational Social Science}{Advised by Prof. Ponnurangam Kumaraguru}{Worked on Long Document Summarization and linguistically-motivated NLP algorithms for Indian Languages.}
   \\
   \Duration{Jan'20}{May'20}  &
-  \Appointment{Research Intern - IIIT Delhi}{Precog Lab}{Advised by Prof. PK}{Worked on canonicalization of industry-scale knowledge graphs and studied linguistic evolution through lexical semantic change.}
+  \Appointment{Research Intern - IIIT Delhi}{Precog Lab}{Advised by Prof. Ponnurangam Kumaraguru}{Worked on canonicalization of industry-scale knowledge graphs and studied linguistic evolution through lexical semantic change.}
   \\
   \Duration{May'19}{Aug'19}  &
   \Appointment{Research Intern}{Wellowise}{Advised by Dr. Saher Mehdi}{Developed large scale medical domain NLP and graph based algorithms for disease diagnosis.}
