--- a/cv.tex
+++ b/cv.tex
@@ -413,16 +413,16 @@
 \end{tabularx}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{References}
-\begin{tabularx}{\textwidth}{@{}p{0.35\textwidth}p{0.65\textwidth}@{}}
-  Dr. Ponnurangam Kumaraguru & Professor at IIIT Hyderabad
-  \\
-  Dr. Monojit Choudhury & Principal Applied Scientist at Microsoft (Turing) India
-  \\
-  Dr. Saptarshi Ghosh & Assistant Professor at IIT Kharagpur
-  \\
-  Dr. Charu Sharma & Assistant Professor at IIIT Hyderabad 
-\end{tabularx}
+% \section{References}
+% \begin{tabularx}{\textwidth}{@{}p{0.35\textwidth}p{0.65\textwidth}@{}}
+%   Dr. Ponnurangam Kumaraguru & Professor at IIIT Hyderabad
+%   \\
+%   Dr. Monojit Choudhury & Principal Applied Scientist at Microsoft (Turing) India
+%   \\
+%   Dr. Saptarshi Ghosh & Assistant Professor at IIT Kharagpur
+%   \\
+%   Dr. Charu Sharma & Assistant Professor at IIIT Hyderabad 
+% \end{tabularx}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Glossary}
