add emnlp grant

--- a/cv.tex
+++ b/cv.tex
@@ -384,6 +384,9 @@
 \section{Awards \& Honors}
 
 \begin{EntriesTable}
+  \Year{2022} &
+  EMNLP Travel Grant worth \$1500 USD
+  \\
   \Year{2020}  &
   NeurIPS, ICML and ACL Travel Grant
   \\
