--- a/cv.tex
+++ b/cv.tex
@@ -409,9 +409,9 @@
 \begin{tabularx}{\textwidth}{@{}p{0.15\textwidth} p{0.85\textwidth}@{}}
   Hindi & Native
   \\
-  English & CBSE 12th Standard
-  \\
-  French & CBSE 10th Standard
+  English & TOEFL (R: 26, L: 29, S: 28, W: 28)
+  % \\
+  % French & CBSE 10th Standard
   % IELTS: CEFR Level C2 (mastery or proficiency) obtained in 2019
 \end{tabularx}
 
