--- a/cv.tex
+++ b/cv.tex
@@ -241,6 +241,9 @@
   \Duration{Jun'21}{\Ongoing}  &
   \Appointment{Research Associate - IIIT Hyderabad}{Centre for Computational Social Science}{Advised by Prof. Ponnurangam Kumaraguru}{Worked on Long Document Summarization and linguistically-motivated NLP algorithms for Indian Languages.}
   \\
+  \Duration{Dec'21}{Jan'22} &
+  \Appointment{Visiting Researcher - Koo}{Bengaluru, India}{Worked with industry-scale data to generate insights for driving engagement on the Koo social network. I was involved in planning experiments and brainstorming sessions to improve the Koo platform. }{}
+  \\
   \Duration{Jan'20}{May'20}  &
   \Appointment{Research Intern - IIIT Delhi}{Precog Lab}{Advised by Prof. Ponnurangam Kumaraguru}{Worked on canonicalization of industry-scale knowledge graphs and studied linguistic evolution through lexical semantic change.}
   \\
