--- a/cv.tex
+++ b/cv.tex
@@ -27,7 +27,7 @@
 \newcommand{\Initials}{A}
 \newcommand{\MyName}{\FirstName\ \LastName}
 \newcommand{\Me}{\textbf{\LastName, \Initials}}  % For citations
-\newcommand{\Email}{anmol.goel@research.iiit.ac.in}
+\newcommand{\Email}{anmol.goel@research.iiit.ac.in, agoel00@gmail.com}
 \newcommand{\PersonalWebsite}{www.anmolg.me}
 \newcommand{\LabWebsite}{www.precog.iiit.ac.in}
 \newcommand{\ORCID}{0000-0001-6123-9515}
